<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdf8e2"
    tools:context=".Crear_Publicacion">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:text="@string/CrearPublicacionesTXT"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ImagenPost"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:src="@drawable/social_media"/>

        <TextView
            android:id="@+id/uiDato"
            android:text="@string/Descripcion"
            android:textSize="35sp"
            android:textColor="#000"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/ImagenDescripcion"
            android:text="@string/ImagenDescripcion"
            android:textSize="35sp"
            android:textColor="#000"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <!--BOTON SUBIR POST-->
        <Button
            android:id="@+id/SubirPost"
            android:text="@string/SubirPost"
            android:layout_marginTop="25dp"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>