<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--FondoDePordata-->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/fondo"
            android:scaleType="center" />

        <!--Datos recuperados-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="80dp">

            <!--Foto de perfil-->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/foto_perfil"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="20dp"
                android:padding="3dp"
                android:src="@drawable/placeholder"
                android:background="#000"/>

            <!--MAS DATOS-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <!--id-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ID:"
                        android:textColor="#000"
                        />
                    <TextView
                        android:id="@+id/idUsuario"
                        android:text="//Aqui va el id del usuario//"
                        android:textColor="#000"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--correo-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Correo:"
                        android:textColor="#000"
                        />
                    <TextView
                        android:id="@+id/correoUsuario"
                        android:text="//Aqui va el correo del usuario//"
                        android:textColor="#000"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--nombres-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nombres:"
                        android:textColor="#000"
                        />
                    <TextView
                        android:id="@+id/nombresUsuario"
                        android:text="//Aqui van los nombres del usuario//"
                        android:textColor="#000"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--MENU DE OPCIONES-->

            <!-- Opcion 1-2 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:weightSum="2">
                <!--MIS DATOS-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:src="@drawable/misdatos"
                        android:layout_gravity="center"/>
                    <Button
                        android:id="@+id/MisDatosOpcion"
                        android:text="@string/MisDatosOpcion"
                        android:layout_marginStart="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!---->
                <!--CREAR POST-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:src="@drawable/crearpost"
                        android:layout_gravity="center"/>
                    <Button
                        android:id="@+id/CrearPublicacionOpcion"
                        android:text="@string/CrearPublicacionOpcion"
                        android:layout_marginStart="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!---->
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- Opcion 3-4 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <!--PUBLICACIONES-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:src="@drawable/publicaciones"
                        android:layout_gravity="center"/>
                    <Button
                        android:id="@+id/Publicaciones"
                        android:text="@string/Publicaciones"
                        android:layout_marginStart="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!---->
                <!--USUARIOS-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:src="@drawable/usuarios"
                        android:layout_gravity="center"/>
                    <Button
                        android:id="@+id/UsuariosOpcion"
                        android:text="@string/UsuariosOpcion"
                        android:layout_marginStart="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!---->
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- Opcion 5-6 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <!--CHATS OPCION-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:src="@drawable/chats"
                        android:layout_gravity="center"/>
                    <Button
                        android:id="@+id/ChatsOpcion"
                        android:text="@string/ChatsOpcion"
                        android:layout_marginStart="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!---->
                <!--CERRAR SESION-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:src="@drawable/cerrarsesion"
                        android:layout_gravity="center"/>
                    <Button
                        android:id="@+id/CerrarSesion"
                        android:text="@string/CerrarSesion"
                        android:layout_marginStart="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!---->
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>